# tools

./: .gitignore  CMakeLists.txt  README.md  image.qrc  main.cpp  widget.cpp  widget.h  widget.ui
HEX2SAE/: hex2SAE.cpp  hex2SAE.h
UI/LaunchMultExe/: LaunchMultExe.ui  launchmultexe.cpp  launchmultexe.h
UI/StringCopy/: stringcopy.cpp  stringcopy.h  stringcopy.ui
UI/h2s/: h2s.cpp  h2s.h  h2s.ui
doc/: README_CN.md
doc/example/: xlsx.cpp
doc/test/: 3.txt  SAE.txt  hex.txt  subStr.txt
doc/usage/CN/: hex2SAE_CN.md  launchMultExe_CN.md  stringCopy_CN.md
doc/usage/en/: hex2SAE_en.md  launchMultExe_en.md  stringCopy_en.md
